; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_power.c_acpi_power_off_unlocked.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_power.c_acpi_power_off_unlocked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_power_resource = type { i64, i32 }

@ACPI_DB_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Power resource [%s] already off\0A\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"Power resource [%s] still in use\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_power_resource*)* @acpi_power_off_unlocked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_power_off_unlocked(%struct.acpi_power_resource* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_power_resource*, align 8
  %4 = alloca i32, align 4
  store %struct.acpi_power_resource* %0, %struct.acpi_power_resource** %3, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.acpi_power_resource*, %struct.acpi_power_resource** %3, align 8
  %6 = getelementptr inbounds %struct.acpi_power_resource, %struct.acpi_power_resource* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @ACPI_DB_INFO, align 4
  %11 = load %struct.acpi_power_resource*, %struct.acpi_power_resource** %3, align 8
  %12 = getelementptr inbounds %struct.acpi_power_resource, %struct.acpi_power_resource* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @ACPI_DEBUG_PRINT(i32 %13)
  store i32 0, i32* %2, align 4
  br label %40

15:                                               ; preds = %1
  %16 = load %struct.acpi_power_resource*, %struct.acpi_power_resource** %3, align 8
  %17 = getelementptr inbounds %struct.acpi_power_resource, %struct.acpi_power_resource* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, -1
  store i64 %19, i64* %17, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %15
  %22 = load i32, i32* @ACPI_DB_INFO, align 4
  %23 = load %struct.acpi_power_resource*, %struct.acpi_power_resource** %3, align 8
  %24 = getelementptr inbounds %struct.acpi_power_resource, %struct.acpi_power_resource* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @ACPI_DEBUG_PRINT(i32 %25)
  br label %38

27:                                               ; preds = %15
  %28 = load %struct.acpi_power_resource*, %struct.acpi_power_resource** %3, align 8
  %29 = call i32 @__acpi_power_off(%struct.acpi_power_resource* %28)
  store i32 %29, i32* %4, align 4
  %30 = load i32, i32* %4, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %27
  %33 = load %struct.acpi_power_resource*, %struct.acpi_power_resource** %3, align 8
  %34 = getelementptr inbounds %struct.acpi_power_resource, %struct.acpi_power_resource* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = add nsw i64 %35, 1
  store i64 %36, i64* %34, align 8
  br label %37

37:                                               ; preds = %32, %27
  br label %38

38:                                               ; preds = %37, %21
  %39 = load i32, i32* %4, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %38, %9
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @ACPI_DEBUG_PRINT(i32) #1

declare dso_local i32 @__acpi_power_off(%struct.acpi_power_resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
